added new routing paths
