# src/go/handler/api.go
@@ -1,17 +1,26 @@
 package handler
 
 import (
+	"fmt"
 	"golang.org/x/crypto/bcrypt"
 	"html/template"
 	"log"
+	storage "logistics-aggregator/src/go"
 	"logistics-aggregator/src/go/model"
 	"net/http"
 	"path/filepath"
 	"strings"
 )
 
-func loadHtmlTemplate(w http.ResponseWriter, path string) {
-	tmpl, err := template.ParseFiles(path)
+var header = filepath.Join("resources", "components", "header.html")
+var main = filepath.Join("resources", "main.html")
+var index = filepath.Join("resources", "index.html")
+var profile = filepath.Join("resources", "profile.html")
+var advert = filepath.Join("resources", "advert.html")
+var registration = filepath.Join("resources", "registration.html")
+
+func loadHtmlTemplate(w http.ResponseWriter, path ...string) {
+	tmpl, err := template.ParseFiles(path...)
 	if err != nil {
 		http.Error(w, err.Error(), 404)
 		return
@@ -25,13 +34,37 @@ func loadHtmlTemplate(w http.ResponseWriter, path string) {
 }
 
 func Index(w http.ResponseWriter, r *http.Request) {
-	// здесь юзеру отдаем страницу регистрации
-	loadHtmlTemplate(w, filepath.Join("resources", "static", "index.html"))
+	loadHtmlTemplate(w, index, header)
+}
 
-	//fs := http.FileServer(http.Dir("logistics-aggregator/resources/static"))
-	//http.Handle("/static/", http.StripPrefix("/static/", fs))
-	// нужно будет чтобы сделать доступными файлы с css стилями
-	//fmt.Fprintf(w, "hehhehe")
+func Main(w http.ResponseWriter, r *http.Request) {
+	err := checkAuth(r) // проверяем авторизован ли пользователя
+	if err != nil {
+		w.Write([]byte(fmt.Sprintln(err)))
+		w.WriteHeader(http.StatusForbidden)
+		return
+	}
+
+	var users []model.User
+	storage.PG.Find(&users)
+	fmt.Println(users)
+
+	//создаем html-шаблон
+	tmpl, err := template.ParseFiles(main, header)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	err = tmpl.Execute(w, users)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
+
+func AuthGet(w http.ResponseWriter, r *http.Request) {
+	loadHtmlTemplate(w, profile, header)
 }
 
 func AuthPost(w http.ResponseWriter, r *http.Request) {
@@ -42,13 +75,34 @@ func AuthPost(w http.ResponseWriter, r *http.Request) {
 	}
 	username := strings.TrimSpace(r.PostFormValue("username"))
 	password := strings.TrimSpace(r.PostFormValue("password"))
-	cookie, res := SignIn(model.AuthBody{Username: username, Password: password})
-	if !res {
+	cookie, err := SignIn(model.AuthBody{Username: username, Password: password})
+	if err != nil {
+		w.Write([]byte(fmt.Sprintln(err)))
 		w.WriteHeader(http.StatusBadRequest)
-	}
 
+	}
 	http.SetCookie(w, &cookie)
-	w.WriteHeader(http.StatusOK)
+	http.Redirect(w, r, "/main", http.StatusSeeOther)
+}
+
+func LogoutGet(w http.ResponseWriter, r *http.Request) {
+	authToken, err := readCookie("authToken", r)
+	if err != nil {
+		delete(storage.Cache, authToken)
+	}
+	Index(w, r)
+}
+
+func AddAdvertGet(w http.ResponseWriter, r *http.Request) {
+	loadHtmlTemplate(w, advert, header)
+}
+
+func AddAdvertPost(w http.ResponseWriter, r *http.Request) {
+
+}
+
+func AddCarPost(w http.ResponseWriter, r *http.Request) {
+
 }
 
 func OrderIdDelete(w http.ResponseWriter, r *http.Request) {
@@ -63,7 +117,7 @@ func OrderIdGet(w http.ResponseWriter, r *http.Request) {
 }
 
 func RegistrationGet(w http.ResponseWriter, r *http.Request) {
-	loadHtmlTemplate(w, filepath.Join("resources", "static", "registration.html"))
+	loadHtmlTemplate(w, registration, header)
 }
 
 func RegistrationPost(w http.ResponseWriter, r *http.Request) {
@@ -75,9 +129,9 @@ func RegistrationPost(w http.ResponseWriter, r *http.Request) {
 	pass, _ := bcrypt.GenerateFromPassword([]byte(r.PostFormValue("password")), bcrypt.DefaultCost)
 	var userType model.UserType
 	switch r.PostFormValue("userType") {
-	case "Заказчик":
+	case "Customer":
 		userType = model.CUSTOMER
-	case "Грузоперевозчик":
+	case "Cargo carrier":
 		userType = model.EXECUTOR
 	default: // админом зарегистрироваться через форму нельзя
 		log.Println("RegistrationPost: Invalid UserType in request!")
@@ -93,11 +147,12 @@ func RegistrationPost(w http.ResponseWriter, r *http.Request) {
 		UserType:  userType,
 	}
 
-	cookie, res := SignUp(user)
-	if !res {
+	cookie, err := SignUp(user)
+	if err != nil {
+		w.Write([]byte(fmt.Sprintln(err)))
 		w.WriteHeader(http.StatusBadRequest)
 	}
 
 	http.SetCookie(w, &cookie)
-	w.WriteHeader(http.StatusOK)
+	http.Redirect(w, r, "/main", http.StatusSeeOther)
 }
